<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hiltiapp.hilti.BulkBuyer.uiBuyer.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.hiltiapp.hilti.BulkBuyer.uiBuyer.CartList.CartListFragment"
        android:label="@string/title_shopping_cart"
        tools:layout="@layout/fragment_cart_list" />

    <fragment
        android:id="@+id/navigation_bulk_buyers"
        android:name="com.hiltiapp.hilti.BulkBuyer.uiBuyer.BulkBuy.BulkBuyFragment"
        android:label="@string/title_bulk_buyers"
        tools:layout="@layout/fragment_bulk_buy" />
</navigation>