<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/confirm_final_order_btn">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt"
                android:text="@string/confirm_order_title"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:padding="12dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />


            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:layout_below="@+id/txt"
                android:background="@drawable/button_background"
                android:padding="8dp">
                <EditText
                    android:id="@+id/shipment_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="10dp"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    android:hint="@string/phone_number"
                    android:maxLength="12"
                    android:inputType="phone"
                    android:textAlignment="viewStart"
                    android:layout_margin="5dp"/>

                <EditText
                    android:id="@+id/shipment_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="20dp"
                    android:layout_margin="5dp"/>



                <EditText
                    android:id="@+id/shipment_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:paddingStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_margin="5dp"/>

                <EditText
                    android:id="@+id/shipment_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:paddingStart="20dp"
                    android:layout_margin="5dp"/>


                <TextView
                    android:id="@+id/spinner_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/screen_divider2"
                    android:text="@string/confirm_order_spinner_label"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/secondary_text_light"

                    />



                <Spinner
                    android:id="@+id/shipping_location"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/spinner_label"
                    android:layout_margin="8dp"
                    android:background="#FFF5F5F5"
                    />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/shipping_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info_layout"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shipping_expenses"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/shipping_expensive_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="00"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#FF3D30"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/purchases_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shipping_price_layout"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/purchases_price"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/purchases_price_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="00"
                    android:gravity="center"
                    android:padding="4dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#FF3D30"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/purchases_price_layout"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_price"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/total_price_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="00"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#4CAF50"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    />
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>




    <Button
        android:id="@+id/confirm_final_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/black"
        android:textAllCaps="false"
        android:textSize="16sp"
        />
</RelativeLayout>