<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:layoutDirection="ltr">



    <TextView
        android:id="@+id/cart_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/title_shopping_cart"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/cart_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart_label"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_below="@+id/cart_label_image"
         android:padding="12dp"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/cart_label_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/order_confirmed"
         android:layout_centerInParent="true"
         android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cart_activity_title"
        android:layout_above="@+id/cart_next_process_btn"

        />
    <Button
        android:id="@+id/cart_next_process_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="18sp"/>



</RelativeLayout>