<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <ImageView
        android:id="@+id/wood_details_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        app:cardCornerRadius="30dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottom_layout2"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/wood_details_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text=" Product Name"
                        android:textSize="20sp"
                        android:layout_toStartOf="@+id/wood_details_code_label"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textAlignment="viewStart"
                        android:padding="4dp"

                        />
                    <TextView
                        android:id="@+id/wood_details_code_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/wood_details_code"
                        android:text="@string/product_details_code"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        android:textColor="@android:color/secondary_text_light"/>

                    <TextView
                        android:id="@+id/wood_details_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentEnd="true"
                        android:text="112233"
                        android:paddingEnd="12dp"
                        android:layout_marginTop="12dp"
                        android:textSize="16sp"
                        android:textColor="@android:color/secondary_text_light"/>

                    <View
                        android:id="@+id/wood_divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/wood_details_name"
                        android:background="?android:attr/listDivider" />


                    <TextView
                        android:id="@+id/wood_details_description_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wood_divider1"
                        android:text="@string/product_details_description"
                        android:padding="4dp"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textColor="@android:color/secondary_text_light"

                        />
                    <TextView
                        android:id="@+id/wood_details_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wood_details_description_label"
                        android:text="product description here"
                        android:padding="4dp"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textColor="@android:color/secondary_text_light"

                        />

                    <View
                        android:id="@+id/wood_divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/wood_details_description"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/wood_details_notes_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wood_divider2"
                        android:text="@string/product_details_notes"
                        android:padding="4dp"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textColor="@android:color/secondary_text_light"

                        />
                    <EditText
                        android:id="@+id/wood_details_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wood_details_notes_label"
                        android:padding="12dp"
                        android:textSize="16sp"
                        android:layout_margin="8dp"
                        android:background="@drawable/button_background"
                        android:textColor="@android:color/secondary_text_light"

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wood_details_notes"
                        android:orientation="horizontal"
                        android:background="@color/colorPrimary"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/wood_details_extra_price_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/product_details_extra_price"
                            android:padding="4dp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/secondary_text_light"

                            />

                        <TextView
                            android:id="@+id/wood_details_extra_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/wood_details_extra_price_label"
                            android:text="20"
                            android:padding="4dp"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="@android:color/secondary_text_light"

                            />

                    </LinearLayout>


                </RelativeLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/bottom_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                >
                <TextView
                    android:id="@+id/wood_details_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/le"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/secondary_text_light"/>

                <TextView
                    android:id="@+id/wood_details_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="150"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/secondary_text_light"/>

                <Button
                    android:id="@+id/wood_add_to_cart_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/add_to_cart"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"/>
            </LinearLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>
